Fix HeaderMain z-index

--- a/src/Main/layouts/Header/HeaderMain/HeaderMain.module.scss
+++ b/src/Main/layouts/Header/HeaderMain/HeaderMain.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 1;
 
   .Main {
     padding-left: 0.5rem;
